--- a/Backdrop_filter/style.css
+++ b/Backdrop_filter/style.css
@@ -10,19 +10,23 @@ body {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  background-image: url("bg-image.jpg");
+  background-image: url("drop.jpg");
 }
 
 .container {
+  position: relative;
   height: 500px;
   width: 350px;
   background-color: rgba(255, 255, 255, 0.6);
   -webkit-backdrop-filter: blur(7px);
           backdrop-filter: blur(7px);
-  position: relative;
 }
 
 .box {
   position: absolute;
+}
+
+.box img {
+  border-radius: 230px;
 }
 /*# sourceMappingURL=style.css.map */
