Chat Bubble Completed

--- a/Chat_bubble/style.css
+++ b/Chat_bubble/style.css
@@ -1,5 +1,5 @@
 body {
-  min-height: 70vh;
+  min-height: 98vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -11,7 +11,7 @@ body {
           align-items: center;
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
-  background: #f0f0f0;
+  background-image: linear-gradient(120deg, #1e1e85, #9c2828);
 }
 
 .talkbubble {
@@ -21,9 +21,9 @@ body {
 .talkbubble .bubble {
   width: 100%;
   position: relative;
-  background: #ecadad;
+  background: #d8c836;
   padding: 0.8rem;
-  border-radius: 10px;
+  border-radius: 20px;
   color: #333232;
 }
 
@@ -35,7 +35,7 @@ body {
   height: 0;
   border-top: 8px solid transparent;
   border-bottom: 8px solid transparent;
-  border-right: 16px solid #ecadad;
+  border-right: 16px solid #d8c836;
   top: 14px;
   left: -15px;
 }
