--- a/Chat_bubble/style.scss
+++ b/Chat_bubble/style.scss
@@ -1,13 +1,13 @@
-$bubble_color : rgb(236, 173, 173);
+$bubble_color : rgb(216, 200, 54);
 
 body {
-    min-height: 70vh;
+    min-height: 98vh;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
-    background: #f0f0f0;
+    background-image: linear-gradient(120deg, rgb(30, 30, 133), rgb(156, 40, 40));
 }
 
 .talkbubble {
@@ -18,7 +18,7 @@ body {
         position: relative;
         background: $bubble_color;
         padding: 0.8rem;
-        border-radius: 10px;
+        border-radius: 20px;
         color: rgb(51, 50, 50);
          
         &::after {
