--- a/Skewed-border/style.css
+++ b/Skewed-border/style.css
@@ -15,8 +15,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   font-family: 'Courier New', Courier, monospace;
-  background-image: url("bg.jpg");
-  background-size: cover;
+  background: #060c21;
   color: whitesmoke;
 }
 
@@ -39,7 +38,7 @@ body {
   position: relative;
   padding: 1%;
   margin: 2%;
-  background: #272727;
+  background: #060c21;
   text-align: center;
   font-size: 0.9rem;
   display: -webkit-box;
@@ -51,9 +50,22 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 300px;
 }
 
 .container .content {
   position: relative;
+}
+
+.container .content h2 {
+  position: absolute;
+  top: -60px;
+  right: 20px;
+  margin: 0;
+  padding: 0;
+  font-size: 10rem;
+  color: rgba(255, 255, 255, 0.05);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 /*# sourceMappingURL=style.css.map */
