--- a/Skewed-border/style.scss
+++ b/Skewed-border/style.scss
@@ -34,6 +34,12 @@ body {
         justify-content: center;
         align-items: center;
         height: 300px;
+
+        &:hover {
+            .content h2 {
+                top: -100px;
+            }
+        }
     }
 
     .content {
@@ -48,6 +54,20 @@ body {
             font-size: 10rem;
             color: rgba(255, 255, 255, 0.05);
             transition: 0.5s;
+        }
+
+        h3 {
+            margin: 0 0 10px;
+            padding: 0;
+            font-size: 24px;
+            font-weight: bolder;
+            color: #fff;
+        }
+
+        p {
+            margin: 0;
+            padding: 0;
+            color: #fff;
         }
     }
 }
