--- a/Skewed-border/style.css
+++ b/Skewed-border/style.css
@@ -22,6 +22,7 @@ body {
 .container {
   position: relative;
   width: 90%;
+  text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -39,7 +40,6 @@ body {
   padding: 1%;
   margin: 2%;
   background: #060c21;
-  text-align: center;
   font-size: 0.9rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -84,6 +84,15 @@ body {
 .container .content p {
   margin: 0;
   padding: 0;
+  color: #fff;
+}
+
+.container .content a {
+  text-align: center;
+  position: absolute;
+  padding: 10px 20px;
+  text-decoration: none;
+  border: 1px solid #fff;
   color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
