--- a/Skewed-border/style.scss
+++ b/Skewed-border/style.scss
@@ -72,8 +72,9 @@ body {
 
         a {
             text-align: center;
-            position: absolute;
-            padding: 10px 20px;
+            margin: 10px 0 0;
+            // position: absolute;
+            padding: 4px 20px;
             text-decoration: none;
             border: 1px solid #fff; 
             // display: block;
