--- a/Skewed-border/style.css
+++ b/Skewed-border/style.css
@@ -89,8 +89,8 @@ body {
 
 .container .content a {
   text-align: center;
-  position: absolute;
-  padding: 10px 20px;
+  margin: 10px 0 0;
+  padding: 4px 20px;
   text-decoration: none;
   border: 1px solid #fff;
   color: #fff;
