--- a/Skewed-border/style.scss
+++ b/Skewed-border/style.scss
@@ -37,7 +37,7 @@ body {
 
         &:hover {
             .content h2 {
-                top: -100px;
+                top: -90px;
             }
             .content a {
                 transform: translateY(0);
@@ -53,9 +53,9 @@ body {
             bottom: -2px;
             left: -2px;
             right: -2px;
-            background: #fff;
+            background: rgb(226, 225, 225);
             z-index: -2;
-            transform: skew(2deg, 2deg);
+            transform: skew(3deg, 3deg);
         }
     }
 
@@ -90,7 +90,7 @@ body {
         a {
             position: relative;
             padding: 10px 10px;
-            margin-top: 10px;
+            margin-top: 20px;
             text-decoration: none;
             border: 1px solid #fff; 
             display: inline-block;
