--- a/Skewed-border/style.scss
+++ b/Skewed-border/style.scss
@@ -59,6 +59,10 @@ body {
         }
     }
 
+    .container .box:nth-child(1):before {
+        background: linear-gradient(315deg, #ff0057, e64a19);
+    }
+
     .content {
         position: relative;
          
