--- a/Skewed-border/style.css
+++ b/Skewed-border/style.css
@@ -77,6 +77,17 @@ body {
           transform: skew(3deg, 3deg);
 }
 
+.container .box:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.07);
+  pointer-events: none;
+}
+
 .container .container .box:nth-child(1):before {
   background: linear-gradient(315deg, #ff0057, e64a19);
 }
