--- a/Skewed-border/style.scss
+++ b/Skewed-border/style.scss
@@ -57,6 +57,17 @@ body {
             z-index: -2;
             transform: skew(3deg, 3deg);
         }
+
+        &:after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 50%;
+            height: 100%;
+            background: rgba(255,255,255,0.07);
+            pointer-events: none;
+        }
     }
 
     .container .box:nth-child(1):before {
