--- a/Skewed-border/style.css
+++ b/Skewed-border/style.css
@@ -88,8 +88,20 @@ body {
   pointer-events: none;
 }
 
-.container .container .box:nth-child(1):before {
-  background: linear-gradient(315deg, #ff0057, e64a19);
+.container .box:nth-child(1):before {
+  background: linear-gradient(315deg, #ff0057, #e64a19);
+}
+
+.container .box:nth-child(2):before {
+  background: linear-gradient(315deg, #44ca44, #1843b8);
+}
+
+.container .box:nth-child(3):before {
+  background: linear-gradient(315deg, #aa5d77, #f1ee3d);
+}
+
+.container .box:nth-child(4):before {
+  background: linear-gradient(315deg, #ff6601, #76d0d3);
 }
 
 .container .content {
