--- a/Skewed-border/style.css
+++ b/Skewed-border/style.css
@@ -37,7 +37,7 @@ body {
 
 .container .box {
   position: relative;
-  padding: 1%;
+  padding: 1.2%;
   margin: 2%;
   background: #060c21;
   font-size: 0.9rem;
@@ -50,11 +50,11 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 300px;
+  height: 350px;
 }
 
 .container .box:hover .content h2 {
-  top: -90px;
+  top: -110px;
 }
 
 .container .box:hover .content a {
@@ -121,9 +121,9 @@ body {
 }
 
 .container .content h3 {
-  margin: 0 0 10px;
+  margin: 0 0 15px 0;
   padding: 0;
-  font-size: 24px;
+  font-size: 1.4rem;
   font-weight: bolder;
   color: #fff;
 }
