--- a/Blog_Page/style.css
+++ b/Blog_Page/style.css
@@ -9,16 +9,18 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: -o-linear-gradient(-45deg, rgba(255, 188, 89, 0.73) 0%, rgba(81, 24, 76, 0.88) 100%);
+  background-image: linear-gradient(310deg, rgba(255, 188, 89, 0.73) 0%, rgba(81, 24, 76, 0.88) 100%);
 }
 
 .container {
-  margin: 5rem;
+  margin: 3rem 15rem 5rem 15rem;
+  padding: 2rem 0 5rem 0;
+  background: rgba(255, 255, 255, 0.5);
 }
 
 .blog {
   text-align: justify;
-  width: 70%;
+  width: 73%;
   margin: auto;
   font-size: 1.2rem;
 }
