--- a/Card_view_effect/style.scss
+++ b/Card_view_effect/style.scss
@@ -1,7 +1,20 @@
-$primary: teal;
+$primary: rgb(8, 122, 122);
 $secondary: #ffffff;
 
 * {
   margin: 0px;
   box-sizing: border-box;
 }
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    font-family: Calibri, sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 400;
+    background-color: $primary;
+    color: $secondary;
+  }
