--- a/Clock/style.css
+++ b/Clock/style.css
@@ -1,5 +1,63 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Orbitron', sans-serif;
+}
+
+body {
+  min-height: 97vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #060a1f;
+  color: whitesmoke;
+}
+
+.clock .time {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.clock .time div {
+  position: relative;
+  margin: 0 5px;
+  -webkit-box-reflect: below 0.5px linear-gradient(transparent, #0004);
+}
+
+.clock .time div span {
+  position: relative;
+  display: block;
+  width: 200px;
+  height: 150px;
+  background: #2196f3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 5rem;
+  z-index: 9;
+  -webkit-box-shadow: 0 0 0 rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 0 rgba(0, 0, 0, 0.3);
+}
+
+.clock .time div span:nth-child(2) {
+  height: 70px;
+  font-size: 2em;
+  background: #127fd6;
+  z-index: 8;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 /*# sourceMappingURL=style.css.map */
