--- a/Clock/style.scss
+++ b/Clock/style.scss
@@ -1,4 +1,48 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Orbitron', sans-serif;
+}
+
+body {
+    min-height: 97vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #060a1f;
+    color: whitesmoke;
+}
+
+.clock {
+    .time {
+        display: flex;
+
+        div {
+            position: relative;
+            margin: 0 5px;
+            -webkit-box-reflect: below 0.5px linear-gradient(transparent, #0004);
+
+            span {
+                position: relative;
+                display: block;
+                width: 200px;
+                height: 150px;
+                background: #2196f3;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 5rem;
+                z-index: 9;
+                box-shadow: 0 0 0 rgba(0,0,0,0.3);
+
+                &:nth-child(2) {
+                    height: 70px;
+                    font-size: 2em;
+                    background: #127fd6;
+                    z-index: 8;
+                    box-shadow: none;
+                }
+            }
+        }
+    }
 }
