--- a/Clock/style.css
+++ b/Clock/style.css
@@ -28,7 +28,10 @@ body {
 .clock .time div {
   position: relative;
   margin: 0 5px;
-  -webkit-box-reflect: below 0.5px linear-gradient(transparent, #0004);
+  -webkit-box-reflect: below 5px linear-gradient(transparent, #0004);
+  border-radius: 15px;
+  background: #127fd6;
+  padding: 7px;
 }
 
 .clock .time div span {
