--- a/Clock/style.css
+++ b/Clock/style.css
@@ -15,7 +15,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: #060a1f;
+  background-image: linear-gradient(350deg, #0c0909, #8b8b8b);
   color: whitesmoke;
 }
 
