--- a/Blog_Page/style.scss
+++ b/Blog_Page/style.scss
@@ -8,14 +8,24 @@ body {
 }
 
 .container {
+    position: relative;
     margin:3rem 15rem 5rem 15rem;
     padding: 2rem 0 5rem 0;
     background: rgba(255,255,255,0.5);
+
+    .blog {
+        z-index: 10;
+        text-align: justify;
+        width: 73%;
+        margin: auto;
+        font-size: 1.2rem;
+    }
+    .logo {
+        position: absolute;
+        z-index: 1;
+    }
 }
 
-.blog {
-    text-align: justify;
-    width: 73%;
-    margin: auto;
-    font-size: 1.2rem;
+h2 {
+    color: rgb(145, 22, 22);
 }
