--- a/Blog_Page/style.css
+++ b/Blog_Page/style.css
@@ -20,6 +20,7 @@ body {
 }
 
 .container .blog {
+  position: relative;
   z-index: 10;
   text-align: justify;
   width: 73%;
@@ -30,6 +31,18 @@ body {
 .container .logo {
   position: absolute;
   z-index: 1;
+  left: 30%;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  opacity: 0.6;
 }
 
 h2 {
