--- a/Blog_Page/style.scss
+++ b/Blog_Page/style.scss
@@ -14,7 +14,7 @@ body {
     background: rgba(255,255,255,0.5);
 
     &:hover {
-        
+
     }
 
     .blog {
@@ -39,4 +39,6 @@ body {
 
 h2 {
     color: rgb(145, 22, 22);
+    text-align: center; 
+    font-size: 3rem;
 }
