--- a/Blog_Page/style.scss
+++ b/Blog_Page/style.scss
@@ -1,9 +1,8 @@
 body {
-    min-height: 100px;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    // background-image: radial-gradient(120deg , rgb(129, 118, 14), rgb(18, 18, 194));
     background-image: linear-gradient(310deg,  rgba(255,188,89,0.73) 0%,rgba(81,24,76,0.88) 100%);
 }
 
@@ -14,7 +13,11 @@ body {
     background: rgba(255,255,255,0.5);
 
     &:hover {
-
+        .logo {
+            // top: -1px;
+            // transition: 5s;
+            animation: shake 0.5s;
+        }
     }
 
     .blog {
