--- a/Blog_Page/style.scss
+++ b/Blog_Page/style.scss
@@ -56,7 +56,8 @@ body {
         width: 86%;
         margin: auto;
         font-size: 1.2rem;
-        font-family: 'Caladea', serif;
+        // font-family: 'Caladea', serif;
+        font-family: 'Source Code Pro', monospace;
     }
     .logo {
         position: absolute;
