--- a/Blog_Page/style.css
+++ b/Blog_Page/style.css
@@ -138,7 +138,7 @@ body {
   width: 86%;
   margin: auto;
   font-size: 1.2rem;
-  font-family: 'Caladea', serif;
+  font-family: 'Source Code Pro', monospace;
 }
 
 .container .logo {
