--- a/Blog_Page/style.css
+++ b/Blog_Page/style.css
@@ -163,8 +163,22 @@ body {
 }
 
 h2 {
+  margin-bottom: 0;
   color: #911616;
   text-align: center;
   font-size: 3rem;
+}
+
+#hrTag {
+  width: 25%;
+  margin: auto;
+  margin-top: 15px;
+  margin-bottom: 35px;
+  border: 0;
+  height: 1px;
+  -webkit-transition: width 2s ease-out;
+  transition: width 2s ease-out;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), color-stop(#911616), to(rgba(0, 0, 0, 0)));
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #911616, rgba(0, 0, 0, 0));
 }
 /*# sourceMappingURL=style.css.map */
