--- a/Moving-car/style.css
+++ b/Moving-car/style.css
@@ -2,4 +2,13 @@
   margin: 0;
   padding: 0;
 }
+
+.container {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  background-image: url("sky.jpg");
+  background-size: cover;
+  overflow-x: hidden;
+}
 /*# sourceMappingURL=style.css.map */
