--- a/Moving-car/style.css
+++ b/Moving-car/style.css
@@ -5,10 +5,66 @@
 
 .container {
   height: 100vh;
-  width: 100vw;
+  width: 500%;
   position: relative;
   background-image: url("sky.jpg");
   background-size: cover;
   overflow-x: hidden;
+}
+
+.road {
+  height: 200px;
+  width: 100%;
+  background-image: url("road.jpg");
+  background-repeat: repeat-x;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  -webkit-animation: highway 5s linear infinite;
+          animation: highway 5s linear infinite;
+}
+
+@-webkit-keyframes highway {
+  100% {
+    -webkit-transform: translateX(-3400px);
+            transform: translateX(-3400px);
+  }
+}
+
+@keyframes highway {
+  100% {
+    -webkit-transform: translateX(-3400px);
+            transform: translateX(-3400px);
+  }
+}
+
+.city {
+  height: 250px;
+  width: 500%;
+  background-image: url("city.png");
+  background-repeat: repeat-x;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 200px;
+  z-index: 1;
+  -webkit-animation: city 20s linear infinite;
+          animation: city 20s linear infinite;
+}
+
+@-webkit-keyframes city {
+  100% {
+    -webkit-transform: translateX(-1400px);
+            transform: translateX(-1400px);
+  }
+}
+
+@keyframes city {
+  100% {
+    -webkit-transform: translateX(-1400px);
+            transform: translateX(-1400px);
+  }
 }
 /*# sourceMappingURL=style.css.map */
