--- a/Moving-car/style.scss
+++ b/Moving-car/style.scss
@@ -5,9 +5,43 @@
 
 .container {
     height: 100vh;
-    width: 100vw;
+    width: 500%;
     position: relative;
     background-image: url('sky.jpg');
     background-size: cover;
     overflow-x: hidden;
+}
+.road {
+    height: 200px;
+    width: 100%;
+    background-image: url('road.jpg');
+    background-repeat: repeat-x;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    animation: highway 5s linear infinite;
+}
+@keyframes highway {
+    100% {
+        transform: translateX(-3400px);
+    }
+}
+.city {
+    height: 250px;
+    width: 500%;
+    background-image: url('city.png');
+    background-repeat: repeat-x;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 200px;
+    z-index: 1;
+    animation: city 20s linear infinite;
+}
+@keyframes city {
+    100%{
+        transform: translateX(-1400px);
+    }
 }
