--- a/Moving-car/style.css
+++ b/Moving-car/style.css
@@ -113,4 +113,29 @@
             transform: translateY(-1px);
   }
 }
+
+.wheel {
+  left: 50%;
+  bottom: 178px;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  position: fixed;
+  z-index: 2;
+}
+
+.wheel img {
+  width: 72px;
+  height: 72px;
+}
+
+.wheel img .back-wheel {
+  left: -165px;
+  position: fixed;
+  z-index: 2;
+}
+
+.wheel img .front-wheel {
+  left: 80px;
+  position: fixed;
+}
 /*# sourceMappingURL=style.css.map */
