--- a/Animated-background/style.css
+++ b/Animated-background/style.css
@@ -40,4 +40,23 @@ body {
   width: 100%;
   height: 100vh;
 }
+
+.box-area {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+}
+
+.box-area li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 25px;
+  height: 25px;
+  background: rgba(255, 255, 255, 0.2);
+  -webkit-animation: animate 20s linear infinite;
+          animation: animate 20s linear infinite;
+}
 /*# sourceMappingURL=style.css.map */
