--- a/Animated-background/style.scss
+++ b/Animated-background/style.scss
@@ -34,8 +34,21 @@ body {
     background: linear-gradient(to left, #8942a8, #ba382f);
     width: 100%;
     height: 100vh;
-    
-    .box-area {
-        
-    }
+}
+
+.box-area {
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     overflow: hidden;
+}
+.box-area li {
+        position: absolute;
+        display: block;
+        list-style: none;
+        width: 25px;
+        height: 25px;
+        background: rgba(255,255,255,0.2);
+        animation: animate 20s linear infinite;
 }
