--- a/Animated-background/style.scss
+++ b/Animated-background/style.scss
@@ -50,5 +50,59 @@ body {
          height: 25px;
          background: rgba(255,255,255,0.2);
          animation: animate 20s linear infinite;
+         &:nth-child(1) {
+             left: 86%;
+             width: 80px;
+             height: 80px;
+             animation-delay: 0s;
+         }
+         &:nth-child(2) {
+            left: 10%;
+            width: 30px;
+            height: 30px;
+            animation-delay: 1.5s;
+            animation-duration: 10s;
+        }
+        &:nth-child(3) {
+            left: 70%;
+            width: 100px;
+            height: 100px;
+            animation-delay: 5.5s;
+        }
+        &:nth-child(4) {
+            left: 86%; 
+            width: 150px;
+            height: 150px;
+            animation-delay: 0s;
+            animation-duration: 15s;
+        }
+        &:nth-child(5) {
+            left: 66%;
+            width: 40px;
+            height: 40px;
+            animation-delay: 0s;
+        }
+        &:nth-child(6) {
+            left: 15%;
+            width: 110px;
+            height: 110px;
+            animation-delay: 3.5s; 
+        }
      }   
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
