--- a/Animated-background/style.scss
+++ b/Animated-background/style.scss
@@ -88,6 +88,16 @@ body {
             height: 110px;
             animation-delay: 3.5s; 
         }
+        @keyframes animate {
+            0% {
+                transform: translateY(0) rotate(0deg);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(-800px) rotate(360deg);
+                opacity: 1;
+            }
+        }
      }   
 }
 
