--- a/Animated-background/style.scss
+++ b/Animated-background/style.scss
@@ -15,7 +15,7 @@ body {
         float: right;
         li {
             display: inline-block;
-            padding: 25px 15px;
+            padding: 30px 15px;
             color: #fff;
             &:nth-child(5) {
                 padding-right: 50px;
@@ -23,10 +23,33 @@ body {
         }
     }
     h2 {
-        text-align: center;
-        font-size: 4em;
+        font-size: 2em;
         color: #fff;
-        margin-top: 20%;
+        padding-top: 10px;
+        margin-left: 40px;
+    }
+    .input {
+        position: absolute;
+        left: 33%;
+        margin-top: 18%;
+        input {
+            padding: 0.8em;
+            width: 400px;
+            background: rgba(255,255,255,0.6);
+            border-radius: 9px;
+            margin-right: 0px;
+        }
+        .btn {
+            padding: 0.8em;
+            background: rgb(8, 27, 136);
+            color: white;
+            margin-left: 0px;
+            cursor: pointer;
+            border-radius: 9px;
+            &:hover {
+                background: rgb(44, 44, 207);
+            }
+        }
     }
 }
 
