--- a/Animated-background/style.scss
+++ b/Animated-background/style.scss
@@ -27,6 +27,7 @@ body {
         color: #fff;
         padding-top: 10px;
         margin-left: 40px;
+        letter-spacing: 2px;
     }
     .input {
         position: absolute;
